--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </style>
 </head>
 <body>
-  <img src="https://media-exp1.licdn.com/dms/image/C4D03AQEpKpJ2g0zcXw/profile-displayphoto-shrink_800_800/0/1650132854568?e=1665014400&v=beta&t=jVWGS2_gLjOU4m-ymW_SDISi1uxyuXMCOiPA0HJlyio" alt="Chukwunonso David's picture">
+  <img src="image/IMG_4677.jpg" alt="Chukwunonso David's picture">
   <h1>Chukwunonso David Ilonze</h1>
   <em>Electronic Engineer</em>
   <hr>
