--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </style>
 </head>
 <body>
-  <img src="image/IMG_4677.jpg" alt="Chukwunonso David's picture">
+  <img src="image/IMG_4677.jpg" alt="Chukwunonso David's picture" height="10px">
   <h1>Chukwunonso David Ilonze</h1>
   <em>Electronic Engineer</em>
   <hr>
