--- a/index.html
+++ b/index.html
@@ -19,15 +19,41 @@
 <body>
   <img src="image/IMG_4677.jpg" alt="Chukwunonso David's picture" height="150px" width="150px">
   <h1>Chukwunonso David Ilonze</h1>
-  <em>Electronic Engineer</em>
+  <em>Electronic Engineer / Full stack Web Developer / Python Data Scientist</em>
   <hr>
-  <h2>Skills</h2>
-  <ul>
-    <li>Python</li>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>Javascript</li>
-  </ul>
+  <table cellpadding="10">
+    <thead>
+      <tr>
+        <th>Personal Data</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Gender:</td>
+        <td>Male</td>
+      </tr>
+      <tr>
+        <td>Country:</td>
+        <td>Nigeria</td>
+      </tr>
+      <tr>
+        <td>Surname:</td>
+        <td>Ilonze</td>
+      </tr>
+      <tr>
+        <td>First name: </td>
+        <td>Chukwunosn</td>
+      </tr>
+      <tr>
+        <td>Language:</td>
+        <td>English (Native Speaker, C1, proved by Certificate IELTS)</td>
+      </tr>
+      <tr>
+        <td>LinkedIn Profile:</td>
+        <td>https://www.linkedin.com/in/chukwunonso-ilonze/</td>
+      </tr>
+    </tbody>
+  </table>
   <hr>
   <h3>Tools</h3>
   <ol>
