--- a/index.html
+++ b/index.html
@@ -21,12 +21,8 @@
   <h1>Chukwunonso David Ilonze</h1>
   <em>Electronic Engineer / Full stack Web Developer / Python Data Scientist</em>
   <hr>
+  <h3>Personal Data</h3>
   <table cellpadding="10">
-    <thead>
-      <tr>
-        <th>Personal Data</th>
-      </tr>
-    </thead>
     <tbody>
       <tr>
         <td>Gender:</td>
@@ -51,6 +47,19 @@
       <tr>
         <td>LinkedIn Profile:</td>
         <td>https://www.linkedin.com/in/chukwunonso-ilonze/</td>
+      </tr>
+    </tbody>
+  </table>
+  <h3>Education</h3>
+  <table cellpadding="10">
+    <tbody>
+      <tr>
+        <td>B.Eng. in Electronic Engineering</td>
+        <td>2010 – 2015</td>
+      </tr>
+      <tr>
+        <td>School:</td>
+        <td>University of Nigeria, Nsukka</td>
       </tr>
     </tbody>
   </table>
