--- a/index.html
+++ b/index.html
@@ -33,12 +33,16 @@
         <td>Nigeria</td>
       </tr>
       <tr>
+        <td>Date of Birth: </td>
+        <td>08-03-1992</td>
+      </tr>
+      <tr>
         <td>Surname:</td>
         <td>Ilonze</td>
       </tr>
       <tr>
         <td>First name: </td>
-        <td>Chukwunosn</td>
+        <td>Chukwunonso</td>
       </tr>
       <tr>
         <td>Language:</td>
@@ -50,6 +54,7 @@
       </tr>
     </tbody>
   </table>
+  <br>
   <h3>Education</h3>
   <table cellpadding="10">
     <tbody>
@@ -63,34 +68,78 @@
       </tr>
     </tbody>
   </table>
-  <hr>
-  <h3>Tools</h3>
-  <ol>
-    <li>VS code</li>
-    <li>Sublime Text</li>
-    <li>Github</li>
-  </ol>
   <br>
+  <h3>Career Summary</h3>
+  <p>
+    I am an Electronic Engineering graduate with more than 5years professional experience in software development and IT. I have hands on experience in working with Python 2, Python 3, HTML, CSS, Django, Flask, JavaScript, Swift, PostgreSQL and AWS while applying CI/CD in my software development practice. 
+  </p>
+  <p>
+    I have developed a handful project using python programming in Full Stack Web development(Django), Machine Learning (scikit-learn), Data Visualization (pandas, numpy, seaborn, matplotlib, plotly, cufflinks), Data Scraping (beautifulsoup, scarpy) and automation of repetitive processes. Some of these projects can be seen on my github repository https://github.com/ndavilo?tab=repositories.
+  </p>
+  <p>
+    I work with the following tools: VS code, Sublime Text, Docker, Jypiter notebook, Anaconda, Xcode and Github. I have installed, configured and maintained Computer software and hardwares for Windows, Mac and Linux systems.
+  </p>
+  <br>
+  <h3>Programming Skills</h3>
   <table cellpadding="10">
-    <thead>
-      <tr>
-        <th>Skills</th>
-      </tr>
-    </thead>
     <tbody>
       <tr>
         <td>Python</td>
         <td>⭐⭐⭐⭐⭐</td>
+        <td>Django</td>
+        <td>⭐⭐⭐⭐⭐</td>
+        <td>NodeJS</td>
+        <td>⭐⭐⭐</td>
+        <td>Flask</td>
+        <td>⭐⭐⭐</td>
+      </tr>
+      <tr>
         <td>HTML</td>
         <td>⭐⭐⭐⭐⭐</td>
-      <tr>
         <td>CSS</td>
         <td>⭐⭐⭐</td>
         <td>Javascript</td>
         <td>⭐</td>
       </tr>
+      <tr>
+        <td>PostgreSQL</td>
+        <td>⭐⭐⭐⭐⭐</td>
+        <td>MongoDB</td>
+        <td>⭐⭐⭐</td>
+        <td>SQLite</td>
+        <td>⭐⭐⭐</td>
+        <td>MySQL</td>
+        <td>⭐</td>
+      </tr>
+      <tr>
+        <td>Pandas</td>
+        <td>⭐⭐⭐⭐⭐</td>
+        <td>Numpy</td>
+        <td>⭐⭐⭐⭐⭐</td>
+        <td>scikit-learn</td>
+        <td>⭐⭐⭐</td>
+        <td>seaborn</td>
+        <td>⭐⭐⭐⭐⭐</td>
+        <td>matplotlib</td>
+        <td>⭐⭐⭐</td>
+        <td>plotly</td>
+        <td>⭐⭐⭐</td>
+      </tr>
     </tbody>
   </table>
+  <br>
+  <h3>Tools</h3>
+  <ol>
+    <li>VS code</li>
+    <li>Sublime Text</li>
+    <li>Github</li>
+    <li>Docker</li>
+    <li>Jypiter notebook</li>
+    <li>Anaconda</li>
+    <li>Xcode</li>
+    <li>Mac Terminal</li>
+  </ol>
+  <br>
 </body>
 
 </html>
