--- a/index.html
+++ b/index.html
@@ -140,6 +140,53 @@
     <li>Mac Terminal</li>
   </ol>
   <br>
+  <h3>Projects</h3>
+  <p>
+    <h5>
+      Python Data Science Projects: With Jupyter notebook, pandas, numpy, matplotlib, seaborn, github and plotly
+    </h5>
+    <li> State Election Result Data visualization </li> 
+    <li> Ekiti State Election Result Data visualization </li> 
+    <li> Bitcoin Data Visualization </li> 
+  </p>
+  <p>
+    <h5>
+      Website and Web application development: With VS code, Sublime Text, Docker, github, Django, Javascript, HTML 5, CSS, Node.JS, Flask, PostgreSQL and Heroku    </h5>
+    <li> 
+      Bit4blog website - https://bit4blog.herokuapp.com/ : This is a platform where people can market their cryptocurrencies for potential buyers, it provides users with updated cryptocurrencies values and also advise them on when to sell, buy or wait using sklearn prediction. 
+    </li> 
+    <li> 
+      Securedchat website - https://securedgroupchat.herokuapp.com/ : This provides users with encrypted group messaging and can only be accessed with 128 - Bit key. The group created has a self-destruct mode.
+    </li> 
+    <li> 
+      Digital CV - https://chukwunonsocv.herokuapp.com/: This was created with Node.JS, CSS and HTML.
+    </li> 
+    <li>
+      Wig Online Store: Created with Javascript, CSS and HTML and can be visualized with Docker.
+    </li>
+  </p>
+  <br>
+  <h3>Skills</h3>
+  <li>
+    Created many web apps (https://bit4blog.herokuapp.com/, https://securedgroupchat.herokuapp.com/),
+  </li>
+  <li>
+    Super Creative
+  </li>
+  <li>
+    Team player (https://github.com/SECURITY-APP-TEAM-X)
+  </li>
+  <li>
+    High learning ability
+  </li>
+  <br>
+  <h3>Certificates</h3>
+  <li>
+    IELTS Cambridge English Assessment Band Score 7.0
+  </li>
+  <li>
+    Udemy Python for Data Science and Machine Learning 
+  </li>
 </body>
 
 </html>
