--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>David's personnal site</title>
   <style media="screen">
     body{
-      background-color: #E5DCC3;
+      background-color: white;
     }
     hr{
       border-style: dotted none none;
@@ -14,14 +14,27 @@
       border-color: #A3DA8D;
       width: 80%
     }
+    img{
+      height: 150px;
+      width: 150px;
+      border-radius: 50%;
+    }
   </style>
 </head>
 <body>
-  <img src="image/IMG_4677.jpg" alt="Chukwunonso David's picture" height="150px" width="150px">
-  <h1>Chukwunonso David Ilonze</h1>
-  <em>Electronic Engineer / Full stack Web Developer / Python Data Scientist</em>
+  <table cellpadding="10">
+    <tbody>
+      <tr>
+        <td><img src="image/IMG_4677.jpg" alt="Chukwunonso David's picture"></td>
+        <td>
+          <h1>Chukwunonso David Ilonze</h1>
+          <em>Electronic Engineer / Full stack Web Developer / Python Data Scientist</em>
+        </td>
+      </tr>
+    </tbody>
+  </table>
   <hr>
-  <h3>Personal Data</h3>
+  <h2>Personal Data</h2>
   <table cellpadding="10">
     <tbody>
       <tr>
@@ -50,12 +63,12 @@
       </tr>
       <tr>
         <td>LinkedIn Profile:</td>
-        <td>https://www.linkedin.com/in/chukwunonso-ilonze/</td>
+        <td><a href="https://www.linkedin.com/in/chukwunonso-ilonze/">https://www.linkedin.com/in/chukwunonso-ilonze/</a></td>
       </tr>
     </tbody>
   </table>
   <br>
-  <h3>Education</h3>
+  <h2>Education</h2>
   <table cellpadding="10">
     <tbody>
       <tr>
@@ -69,7 +82,7 @@
     </tbody>
   </table>
   <br>
-  <h3>Career Summary</h3>
+  <h2>Career Summary</h2>
   <p>
     I am an Electronic Engineering graduate with more than 5years professional experience in software development and IT. I have hands on experience in working with Python 2, Python 3, HTML, CSS, Django, Flask, JavaScript, Swift, PostgreSQL and AWS while applying CI/CD in my software development practice. 
   </p>
@@ -80,7 +93,7 @@
     I work with the following tools: VS code, Sublime Text, Docker, Jypiter notebook, Anaconda, Xcode and Github. I have installed, configured and maintained Computer software and hardwares for Windows, Mac and Linux systems.
   </p>
   <br>
-  <h3>Programming Skills</h3>
+  <h2>Programming Skills</h2>
   <table cellpadding="10">
     <tbody>
       <tr>
@@ -114,8 +127,6 @@
       <tr>
         <td>Pandas</td>
         <td>⭐⭐⭐⭐⭐</td>
-        <td>Numpy</td>
-        <td>⭐⭐⭐⭐⭐</td>
         <td>scikit-learn</td>
         <td>⭐⭐⭐</td>
         <td>seaborn</td>
@@ -128,7 +139,7 @@
     </tbody>
   </table>
   <br>
-  <h3>Tools</h3>
+  <h2>Tools</h2>
   <ol>
     <li>VS code</li>
     <li>Sublime Text</li>
@@ -140,18 +151,19 @@
     <li>Mac Terminal</li>
   </ol>
   <br>
-  <h3>Projects</h3>
+  <h2>Projects</h2>
   <p>
-    <h5>
+    <h4>
       Python Data Science Projects: With Jupyter notebook, pandas, numpy, matplotlib, seaborn, github and plotly
-    </h5>
+    </h4>
     <li> State Election Result Data visualization </li> 
     <li> Ekiti State Election Result Data visualization </li> 
     <li> Bitcoin Data Visualization </li> 
   </p>
   <p>
-    <h5>
-      Website and Web application development: With VS code, Sublime Text, Docker, github, Django, Javascript, HTML 5, CSS, Node.JS, Flask, PostgreSQL and Heroku    </h5>
+    <h4>
+      Website and Web application development: With VS code, Sublime Text, Docker, github, Django, Javascript, HTML 5, CSS, Node.JS, Flask, PostgreSQL and Heroku    
+    </h4>
     <li> 
       Bit4blog website - https://bit4blog.herokuapp.com/ : This is a platform where people can market their cryptocurrencies for potential buyers, it provides users with updated cryptocurrencies values and also advise them on when to sell, buy or wait using sklearn prediction. 
     </li> 
@@ -166,7 +178,7 @@
     </li>
   </p>
   <br>
-  <h3>Skills</h3>
+  <h2>Skills</h2>
   <li>
     Created many web apps (https://bit4blog.herokuapp.com/, https://securedgroupchat.herokuapp.com/),
   </li>
@@ -180,13 +192,62 @@
     High learning ability
   </li>
   <br>
-  <h3>Certificates</h3>
+  <h2>Certificates</h2>
   <li>
     IELTS Cambridge English Assessment Band Score 7.0
   </li>
-  <li>
-    Udemy Python for Data Science and Machine Learning 
+  <li><a href="ude.my/UC-8ff87848-bc08-4df4-ab3b-d09c94275582">
+    Udemy Python for Data Science and Machine Learning</a>
   </li>
+  <br>
+  <h2>Work Experience</h2>
+  <p>
+    <table cellpadding="10">
+      <tbody>
+        <tr>
+          <td>
+            <h3>Full Stack Developer remote Upwork </h3>
+          </td>
+          <td>
+            <h4>03.01.2022 – present</h4>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <li> Design and implementation of the overall web architecture using frameworks: Django, Flask, Nodejs on Docker and VS code</li> 
+    <li> Create, design, and implement layouts for new and existing web pages,</li> 
+    <li> Web Scraping, Data analysis, Model the data for use and display on the website on Jupiter python </li> 
+    <li> Developing Application Programming Interface API, </li> 
+    <li> Integrating Front-end UI with the API, </li> 
+    <li> Troubleshooting and checking for improvements, </li> 
+    <li> Debugging Softwares, </li> 
+    <li> Ensuring the security of the website/application/software developed, </li> 
+    <li> Create and maintain Postgres database on pgAdmin </li> 
+    <li> Creating mobile apps with Swift programming language on Xcode </li> 
+  </p>
+  <p>
+    <table cellpadding="10">
+      <tbody>
+        <tr>
+          <td>
+            <h3>Full Stack Developer at GreyWolf Empire </h3>
+          </td>
+          <td>
+            <h4>01.03.2019 – present</h4>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <li> Developing new Python programs, </li> 
+    <li> Ekiti State Election Result Data visualization </li> 
+    <li> Automation of tasks and data analysis. </li> 
+    <li> Python Software testing. </li> 
+    <li> Backend programming with python, Javascript and PostreSQL. </li> 
+    <li> Checking for design flaws and vulnerabilities. </li> 
+    <li> Build and Deploy Django website on AWS and Heroku. </li> 
+    <li> Integrating Machine Learning codes into Django apps. </li> 
+  </p>
+  <br><hr><br>
 </body>
 
 </html>
