--- a/index.html
+++ b/index.html
@@ -4,22 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>David's personnal site</title>
-  <style media="screen">
-    body{
-      background-color: white;
-    }
-    hr{
-      border-style: dotted none none;
-      border-width: 5px;
-      border-color: #A3DA8D;
-      width: 80%
-    }
-    img{
-      height: 150px;
-      width: 150px;
-      border-radius: 50%;
-    }
-  </style>
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
   <table cellpadding="10">
