--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>David's personnal site</title>
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <table cellpadding="10">
@@ -86,6 +86,8 @@
         <td>⭐⭐⭐⭐⭐</td>
         <td>Django</td>
         <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+      <tr>
         <td>NodeJS</td>
         <td>⭐⭐⭐</td>
         <td>Flask</td>
@@ -96,14 +98,20 @@
         <td>⭐⭐⭐⭐⭐</td>
         <td>CSS</td>
         <td>⭐⭐⭐</td>
+      </tr>
+      <tr>
         <td>Javascript</td>
-        <td>⭐</td>
+        <td>⭐⭐⭐</td>
+        <td>AWS</td>
+        <td>⭐⭐⭐</td>
       </tr>
       <tr>
         <td>PostgreSQL</td>
         <td>⭐⭐⭐⭐⭐</td>
         <td>MongoDB</td>
         <td>⭐⭐⭐</td>
+      </tr>
+      <tr>
         <td>SQLite</td>
         <td>⭐⭐⭐</td>
         <td>MySQL</td>
@@ -112,13 +120,19 @@
       <tr>
         <td>Pandas</td>
         <td>⭐⭐⭐⭐⭐</td>
-        <td>scikit-learn</td>
+        <td>Numpy</td>
         <td>⭐⭐⭐</td>
+      </tr>
+      <tr>
         <td>seaborn</td>
         <td>⭐⭐⭐⭐⭐</td>
         <td>matplotlib</td>
         <td>⭐⭐⭐</td>
+      </tr>
+      <tr>
         <td>plotly</td>
+        <td>⭐⭐⭐</td>
+        <td>scikit-learn</td>
         <td>⭐⭐⭐</td>
       </tr>
     </tbody>
