--- a/index.html
+++ b/index.html
@@ -35,12 +35,16 @@
         <td>08-03-1992</td>
       </tr>
       <tr>
-        <td>Surname:</td>
-        <td>Ilonze</td>
-      </tr>
-      <tr>
         <td>First name: </td>
         <td>Chukwunonso</td>
+      </tr>
+      <tr>
+        <td>Other name: </td>
+        <td>David</td>
+      </tr>
+      <tr>
+        <td>Surname:</td>
+        <td>Ilonze</td>
       </tr>
       <tr>
         <td>Language:</td>
