--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>David's personnal site</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="shortcut icon" href="Coinbloglogo@4x.png" type="image/x-icon">
 </head>
 <body>
   <table cellpadding="10">
@@ -76,7 +77,7 @@
     I am an Electronic Engineering graduate with more than 5years professional experience in software development and IT. I have hands on experience in working with Python 2, Python 3, HTML, CSS, Django, Flask, JavaScript, Swift, PostgreSQL and AWS while applying CI/CD in my software development practice. 
   </p>
   <p>
-    I have developed a handful project using python programming in Full Stack Web development(Django), Machine Learning (scikit-learn), Data Visualization (pandas, numpy, seaborn, matplotlib, plotly, cufflinks), Data Scraping (beautifulsoup, scarpy) and automation of repetitive processes. Some of these projects can be seen on my github repository https://github.com/ndavilo?tab=repositories.
+    I have developed a handful project using python programming in Full Stack Web development(Django), Machine Learning (scikit-learn), Data Visualization (pandas, numpy, seaborn, matplotlib, plotly, cufflinks), Data Scraping (beautifulsoup, scarpy) and automation of repetitive processes. Some of these projects can be seen on my github repository <a href="https://github.com/ndavilo?tab=repositories">https://github.com/ndavilo?tab=repositories</a>.
   </p>
   <p>
     I work with the following tools: VS code, Sublime Text, Docker, Jypiter notebook, Anaconda, Xcode and Github. I have installed, configured and maintained Computer software and hardwares for Windows, Mac and Linux systems.
@@ -92,9 +93,15 @@
         <td>⭐⭐⭐⭐⭐</td>
       </tr>
       <tr>
-        <td>NodeJS</td>
-        <td>⭐⭐⭐</td>
         <td>Flask</td>
+        <td>⭐⭐⭐</td>
+        <td>Node.js</td>
+        <td>⭐⭐⭐</td>
+      </tr>
+      <tr>
+        <td>React.js</td>
+        <td>⭐⭐⭐</td>
+        <td>JavaScript</td>
         <td>⭐⭐⭐</td>
       </tr>
       <tr>
@@ -104,7 +111,7 @@
         <td>⭐⭐⭐</td>
       </tr>
       <tr>
-        <td>Javascript</td>
+        <td>Heroku</td>
         <td>⭐⭐⭐</td>
         <td>AWS</td>
         <td>⭐⭐⭐</td>
@@ -139,6 +146,12 @@
         <td>scikit-learn</td>
         <td>⭐⭐⭐</td>
       </tr>
+      <tr>
+        <td>RESTful API</td>
+        <td>⭐⭐⭐</td>
+        <td>Express.js</td>
+        <td>⭐⭐⭐</td>
+      </tr>
     </tbody>
   </table>
   <br>
@@ -168,28 +181,32 @@
       Website and Web application development: With VS code, Sublime Text, Docker, github, Django, Javascript, HTML 5, CSS, Node.JS, Flask, PostgreSQL and Heroku    
     </h4>
     <li> 
-      Bit4blog website - https://bit4blog.herokuapp.com/ : This is a platform where people can market their cryptocurrencies for potential buyers, it provides users with updated cryptocurrencies values and also advise them on when to sell, buy or wait using sklearn prediction. 
+      Bit4blog website - <a href="https://bit4blog.herokuapp.com/">https://bit4blog.herokuapp.com/</a> : This is a platform where people can market their cryptocurrencies for potential buyers, it provides users with updated cryptocurrencies values and also advise them on when to sell, buy or wait using sklearn prediction. 
     </li> 
     <li> 
-      Securedchat website - https://securedgroupchat.herokuapp.com/ : This provides users with encrypted group messaging and can only be accessed with 128 - Bit key. The group created has a self-destruct mode.
+      Securedchat website - <a href="https://securedgroupchat.herokuapp.com/">https://securedgroupchat.herokuapp.com/</a> : This provides users with encrypted group messaging and can only be accessed with 128 - Bit key. The group created has a self-destruct mode.
     </li> 
     <li> 
-      Digital CV - https://chukwunonsocv.herokuapp.com/: This was created with Node.JS, CSS and HTML.
+      Digital CV - <a href="https://chukwunonsocv.herokuapp.com/">https://chukwunonsocv.herokuapp.com/</a>: This was created with Node.JS, CSS and HTML.
     </li> 
     <li>
       Wig Online Store: Created with Javascript, CSS and HTML and can be visualized with Docker.
+    </li>
+    <li>
+      I have used Github setting page to host projects from Github repository <a href="https://ndavilo.github.io/udemy_web_development_bootcamp/">https://ndavilo.github.io/udemy_web_development_bootcamp/</a>
+      <a href="https://security-app-team-x.github.io/login/">https://security-app-team-x.github.io/login/</a>
     </li>
   </p>
   <br>
   <h2>Skills</h2>
   <li>
-    Created many web apps (https://bit4blog.herokuapp.com/, https://securedgroupchat.herokuapp.com/),
+    Created many web apps (<a href="https://securedgroupchat.herokuapp.com/">https://securedgroupchat.herokuapp.com/</a>, <a href="https://bit4blog.herokuapp.com/">https://bit4blog.herokuapp.com/</a>),
   </li>
   <li>
     Super Creative
   </li>
   <li>
-    Team player (https://github.com/SECURITY-APP-TEAM-X)
+    Team player (<a href="https://github.com/SECURITY-APP-TEAM-X">https://github.com/SECURITY-APP-TEAM-X</a>)
   </li>
   <li>
     High learning ability
@@ -199,7 +216,7 @@
   <li>
     IELTS Cambridge English Assessment Band Score 7.0
   </li>
-  <li><a href="ude.my/UC-8ff87848-bc08-4df4-ab3b-d09c94275582">
+  <li><a href="https://www.udemy.com/certificate/UC-8ff87848-bc08-4df4-ab3b-d09c94275582/">
     Udemy Python for Data Science and Machine Learning</a>
   </li>
   <br>
