--- a/index.html
+++ b/index.html
@@ -219,6 +219,15 @@
   <li><a href="https://www.udemy.com/certificate/UC-8ff87848-bc08-4df4-ab3b-d09c94275582/">
     Udemy Python for Data Science and Machine Learning</a>
   </li>
+  <li>
+    Udemy The Complete 2022 Web Development Bootcamp
+  </li>
+  <li>
+    Udemy The Complete SQL Bootcamp 2022: Go from Zero to Hero
+  </li>
+  <li>
+    Udemy Ultimate AWS Certified Developer Associate 2022
+  </li>
   <br>
   <h2>Work Experience</h2>
   <p>
