--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <td>SQLite</td>
         <td>⭐⭐⭐</td>
         <td>MySQL</td>
-        <td>⭐</td>
+        <td>⭐⭐⭐</td>
       </tr>
       <tr>
         <td>Pandas</td>
@@ -230,7 +230,6 @@
   </li>
   <br>
   <h2>Work Experience</h2>
-  <p>
     <table cellpadding="10">
       <tbody>
         <tr>
@@ -262,7 +261,7 @@
             <h3>Full Stack Developer at GreyWolf Empire </h3>
           </td>
           <td>
-            <h4>01.03.2019 – present</h4>
+            <h4>04.03.2019 – present</h4>
           </td>
         </tr>
       </tbody>
@@ -275,6 +274,44 @@
     <li> Checking for design flaws and vulnerabilities. </li> 
     <li> Build and Deploy Django website on AWS and Heroku. </li> 
     <li> Integrating Machine Learning codes into Django apps. </li> 
+  </p>
+  <p>
+    <table cellpadding="10">
+      <tbody>
+        <tr>
+          <td>
+            <h3>Information Security Analyst at SACSAM</h3>
+          </td>
+          <td>
+            <h4>01.05.2017 – 01-02-2019</h4>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <li> Assess risks, threats and vulnerabilities of the project, </li> 
+    <li> Using tools like Nmap, Kali Linux tools and Parrots for scanning and detecting leakages, </li> 
+    <li> Checking for design flaws that will lead to vulnerabilities, </li> 
+    <li> Providing day to day security updates and installations,</li> 
+    <li> System malware detecting and management. </li> 
+  </p>
+  <p>
+    <table cellpadding="10">
+      <tbody>
+        <tr>
+          <td>
+            <h3>Embedded Software Engineer at Mindage </h3>
+          </td>
+          <td>
+            <h4>02.11.2015 – 10-03-2017</h4>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <li> Identified new market and products, </li> 
+    <li> Developed software in a Linux, Windows and Mac environment using C and Python, </li> 
+    <li> Automation of tasks using Arduino, </li> 
+    <li> Built a Smart Electric Meter using C programming language and Micro-controllers</li> 
+    <li> Designed a home control system with python and raspberry pi. </li> 
   </p>
   <br><hr><br>
 </body>
